<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vanhackathon.imagefy.NewWishActivityFragment"
    tools:showIn="@layout/activity_new_wish">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/new_wish_image_view_preview_1"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:src="@drawable/shopify_bag" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_take_a_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/take_a_photo" />

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gallery" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_category"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/send" />
    </LinearLayout>
</ScrollView>